objects/CSS_SRT__c.object
<CustomObject>
    <fields>
        <fullName>Troubleshoot__c</fullName>
        <label>Troubleshoot</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diagnosis</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Diag Access</fullName>
                </value>
                <value>
                    <fullName>Repair Access</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>99Time</fullName>
                </value>
                <value>
                    <fullName>Overlap</fullName>
                </value>
                <value>
                    <fullName>Field Action</fullName>
                </value>
                <value>
                    <fullName>Field Action Access</fullName>
                </value>
                <value>
                    <fullName>BMS SRT</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Allocation__c</fullName>
        <label>Warranty Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isDuplicateRootCause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDuplicateRootCause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPerformed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPerformed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isSrtFailCode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>field to determine, whether the failcode is present only in SRT object, but not in solution component. Created to handle this scenario for failcode Account code drop down in jobplan srt</description>
        <label>isSrtFailCode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUserEntered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isUserEntered</label>
        <type>Checkbox</type>
    </fields>
    <label>CSS SRT</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>SRT_ID__c</columns>
        <columns>SRT_Time__c</columns>
        <columns>SRT_Type__c</columns>
        <columns>SRT_Details__c</columns>
        <columns>Access_Code__c</columns>
        <columns>Job_Order__c</columns>
        <columns>Percentage__c</columns>
        <columns>Solution_Number__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>CSS SRT Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS SRTS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>